[package]
name = "send-tx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
dotenv = "0.15.0"
env_logger = "0.11.5"
envy = "0.4.2"
ethers = "2.0"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.6"
tokio = { version = "1", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
